Fix navbar spacing

--- a/jms-frontend/src/App.scss
+++ b/jms-frontend/src/App.scss
@@ -98,6 +98,10 @@ html, body, #root {
   }
 }
 
+.navbar {
+  padding: 1rem;
+}
+
 .navbar-padding {
   padding-top: 72px;
   > .col {
